<resources>
    <string name="app_name">Alladyn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nowe_zdjecie">NOWE ZDJĘCIE</string>
    <string name="odczytane_wymiary">Odczytane wymiary:</string>
    <string name="metraz">Metraż:</string>
    <string name="zatwierdz_dane">ZATWIERDŹ DANE</string>
    <string name="len_text_string">%s</string>
    <string name="wid_text_string">%s</string>
    <string name="area_text_string">%s</string>
    <string name="meter">m</string>
    <string name="quadratic_meter">m<sup>2</sup></string>
    <string name="question_measurements">Zbadane wymiary nie zgadzają się?\nWpisz swoje poniżej:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_went_wrong_try_again">Coś poszło nie tak. Ponów próbę!</string>
    <string name="check_entered_carpet_measurements">Sprawdź wprowadzone wymiary dywanu!</string>
    <string name="data_of_current_carpet">Dane o aktualnie dodawanym dywanie:</string>
    <string name="wymiary_s_m_x_s_m">Wymiary: %s m X %s m</string>
    <string name="powierzchnia_s_m2">Powierzchnia: %s m<sup>2</sup></string>
    <string name="w_jaki_sposob_dywan_zostal_przyjety_do_czyszczenia">W jaki sposób dywan został przyjęty do czyszczenia?</string>
    <string name="cena_za_czyszczenie_metra_kw_dywanu_wynosi">Cena za czyszczenie metra kwadratowego tego dywanu wynosi: %s złotych.</string>
    <string name="ostateczna_cena_tego_dywanu_wynosi_s_z_otych">Ostateczna cena czyszczenia tego dywanu wynosi: %s złotych.</string>
    <string name="co_si_nie_zgadza_nwr_i_pon_w_pomiary">Coś się nie zgadza?\nWróć i ponów pomiary.</string>
    <string name="wszystko_si_zgadza_nzatwierd_dywan_i_dodaj_go_do_bazy">Wszystko się zgadza?\nZatwierdź dane.</string>
    <string name="wr_do_pomiar_w">Wróć do pomiarów</string>
    <string name="zatwierd_dywan">Zatwierdź dywan</string>
    <string name="dodaj_dane_kontaktowe">Dodaj dane kontaktowe do właściciela dywanu:</string>
    <string name="nr_telefonu">Nr telefonu</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="wybierz_punkt_odbioru_dywanu">Wybierz punkt odbioru dywanu i podaj jego numer:</string>
    <string name="odbi_r_od_klienta_prywatnego">Odbiór od klienta prywatnego</string>
    <string name="odbi_r_od_partnera_firmy">Odbiór od partnera firmy</string>
    <string name="punkt_1">PUNKT 1</string>
    <string name="punkt_2">PUNKT 2</string>
    <string name="punkt_3">PUNKT 3</string>
    <string name="nr_dywanu">Numer dywanu</string>
    <string name="nie_wype_niono_wszystkich_niezb_dnych_p_l">Nie wypełniono wszystkich niezbędnych pól!</string>
    <string name="dywan_zosta_poprawnie_dodany_do_bazy">Dywan został poprawnie dodany do bazy.</string>
    <string name="zr_b_zdj_cie_dywanu_po_czyszczeniu_i_dodaj_je_do_bazy">Zrób zdjęcie dywanu po czyszczeniu i dodaj je do bazy:</string>
    <string name="przejrzyj_wszystkie_dodane_dywany">Przejrzyj wszystkie dodane dywany:</string>
    <string name="lista_dywan_w">LISTA DYWANÓW</string>
    <string name="przejd_do_generowania_raport_w">Przejdź do generowania raportów:</string>
    <string name="raporty">RAPORTY</string>
    <string name="wr_do_menu_g_wnego">Wróć do menu głównego:</string>
    <string name="menu">MENU</string>
    <string name="inne_dostepne_akcje">Inne dostępne akcje:</string>
    <string name="dodaj_nowy_dywan">DODAJ NOWY DYWAN</string>
</resources>