<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="48dp"
    tools:context=".view.EnterCarpetDataAndSaveToDBFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/red_300_rounded_linear_layout_style"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/average_imageview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/carpet_2" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/measured_imageview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/carpet_2" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/data_of_current_carpet" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/current_carpet_measures_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/wymiary_s_m_x_s_m" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/current_carpet_area_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/powierzchnia_s_m2" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_weight="3"
        android:background="@drawable/red_300_rounded_linear_layout_style"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/w_jaki_sposob_dywan_zostal_przyjety_do_czyszczenia" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/service_type_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/individual_service_type_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Odbiór od klienta prywatnego"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/partner_service_type_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Odbiór od partnera firmy"
                android:layout_weight="1"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/carpet_meter_price_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/cena_za_czyszczenie_metra_kw_dywanu_wynosi" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/final_carpet_price_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_300_rounded_linear_layout_style"
            android:padding="6dp"
            android:text="@string/ostateczna_cena_tego_dywanu_wynosi_s_z_otych" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:padding="6dp"
                    android:text="@string/co_si_nie_zgadza_nwr_i_pon_w_pomiary" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:padding="6dp"
                    android:text="@string/wszystko_si_zgadza_nzatwierd_dywan_i_dodaj_go_do_bazy" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/back_to_carper_measures_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wr_do_pomiar_w" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_carpet_to_db_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zatwierd_dywan" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>