<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="48dp"
    tools:context=".view.TakeCarpetPhotoAfterCleaningFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@drawable/red_700_rounded_linear_layout_style"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="32dp"
            android:layout_weight="1"
            android:background="@drawable/red_300_rounded_linear_layout_style"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/check_circle_outline_icon"
                android:backgroundTint="@android:color/holo_green_light"
                android:importantForAccessibility="no" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/dywan_zosta_poprawnie_dodany_do_bazy"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_new_carpet_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="172dp"
            android:layout_marginEnd="172dp"
            android:layout_marginBottom="32dp"
            android:text="@string/dodaj_nowy_dywan"
            android:textSize="20sp"
            app:icon="@drawable/add_circle_icon"
            app:iconSize="45dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:padding="16dp"
            android:text="@string/inne_dostepne_akcje"
            android:textSize="20sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/full_arrow_right_icon"
                android:importantForAccessibility="no" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/zr_b_zdj_cie_dywanu_po_czyszczeniu_i_dodaj_je_do_bazy"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/carpet_photo_after_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="2"
                android:text="@string/nowe_zdjecie" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/full_arrow_right_icon"
                android:importantForAccessibility="no" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/przejrzyj_wszystkie_dodane_dywany"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/go_to_carpets_list_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="2"
                android:text="@string/lista_dywan_w" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/full_arrow_right_icon"
                android:importantForAccessibility="no" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/przejd_do_generowania_raport_w"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/go_to_raports_buton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="2"
                android:text="@string/raporty" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/full_arrow_right_icon"
                android:importantForAccessibility="no" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/wr_do_menu_g_wnego"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/go_to_main_menu_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="2"
                android:text="@string/menu" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_weight="2"
        android:background="@drawable/red_700_rounded_linear_layout_style">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/carpet_2"
            android:importantForAccessibility="no"
            android:padding="48dp" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>